@@ -1,3 +1,10 @@
+2011-11-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-83
+	* Add errorNotification panel to present error details. (bug 88414).
+	* Handle exceptions generated by broken configurations in load process. (bug 88414).
+	* Add getConfDbVersion and getContactPerson methods in AboutDialog class
+	  to be used when reporting errors.
+
 2011-11-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-82
 	* Add new tab in right lower panel with a list of sequences containing 
